--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.45.0",
     "@tanstack/react-query": "^5.51.23",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~51.0.20",
     "expo-crypto": "~13.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.8",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
